namespace DDDNetCore.Domain.Staffs
{
    public enum StaffSpecialization 
    {
            None,
            Cardiology , 
            Orthopedics ,
            Neurology,
            Emergency_medicine,
            Obstetrics_and_gynaecology,
            Internal_medicine,
            Anesthesiology,
            Oncology,
            Psychiatry,
            Nuclear_medicine,
            Dermatology,
            Family_medicine,
            Geriatrics ,
            Radiology ,
            Critical_care_medicine ,
            Nephrology ,
            Hematology ,
            Ophthalmology ,
            Gastroenterology ,
            Immunology ,
            General_surgery ,
            Endocrinology ,
            Pediatrics ,
            Medical_genetics ,
            Pathology ,
            Urology ,
        }
    }

